# PlasmDllBackUp

./: GlobalVarsInit.cpp  MainDllFunc.cpp  MainDllFunc.h  PlasmaDataProcessing.sln  SG.cpp.txt  SG.h.txt  Zond_Obr (2).vcxproj  Zond_Obr.h  Zond_Obr.vcxproj  Zond_Obr.vcxproj (2).filters  Zond_Obr.vcxproj.filters  cpp.hint  dllmain.cpp  framework.h  pch.h  resource1.h  Текущий исполняемый.txt  Функции аппроксимации.txt
Cilinder/: Cilinder.cpp  Cilinder.h
DoubleLangmuirProbe/: DoubleProbe.cpp  DoubleProbe.h
Find_Peaks/: PeakFinder (2).cpp  PeakFinder.cpp  PeakFinder.h
Lev-Marq/: Exponential function params initialization from Origin.txt  Lev-Marq.cpp  Lev-Marq.h  Оригинальный код LEV-MARQ.txt
Lev-Marq/lmfit-main/: .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  README.md  lmfit.pc.in
Lev-Marq/lmfit-main/demo/: CMakeLists.txt  curve1.c  curve2.c  nonlin1.c  surface1.c
Lev-Marq/lmfit-main/democpp/: CMakeLists.txt  curve1.cpp  nonlin1.cpp  surface1.cpp
Lev-Marq/lmfit-main/fittest/: runfittest.c
Lev-Marq/lmfit-main/lib/: CMakeLists.txt  lmfit.hpp  lmmin.c
Lev-Marq/lmfit-main/man/: CMakeLists.txt  lmcurve.pod  lmcurve2.pod  lmfit.pod  lmmin.pod  lmmin2.pod
Lev-Marq/lmfit-main/test/: CMakeLists.txt  run_qr.c  test_inversion.c
Matrix Class/: matrix.cpp  mynamespace.h
Matrix_Class/: matrix.h  mynamespace.h
Processing_Result_class/: ProcessingResultClass.h
Savitky-Golay/: Savitsky-Golay.cpp
Savitsky-Golay/: Savitsky-Golay.cpp  Savitsky-Golay.h
Setka/: Setka.cpp  Setka.h
SubFunctions/: SubFuncs (2).cpp  SubFuncs.cpp  SubFuncs.h
Zond/: Zond (2).cpp  Zond.cpp  Zond.h
